@@ -12,7 +12,7 @@
   <parent>
 	  <groupId>com.nativelibs4java</groupId>
 	  <artifactId>opencl4java-parent</artifactId>
-	  <version>1.0-beta-4</version>
+	  <version>1.0-SNAPSHOT</version>
 	  <relativePath>../Parent</relativePath>
   </parent>
 
@@ -25,12 +25,12 @@
 	  <scope>compile</scope>
 	</dependency>
 	
-	<dependency>
+	<!--dependency>
 		<groupId>net.java.jogl.nl4j</groupId>
 		<artifactId>jogl</artifactId>
 		<version>2.x-SNAPSHOT</version>
 	    <scope>provided</scope>
-	</dependency>
+	</dependency-->
     <dependency>
       <groupId>org.swinglabs</groupId>
       <artifactId>swing-layout</artifactId>
